# DevlopingDjangoProjectsIBM_Module2

./: .gitignore  README.md  pyproject.toml
lab2_template/: pyproject.toml
lab2_template/adminsite/: models.py
lab2_template/myproject/: settings.py
lab3_template/: README.md  pyproject.toml
lab3_template/myproject/: settings.py
lab3_template/onlinecourse/: urls.py  views.py
lab3_template/onlinecourse/migrations/: 0001_initial.py
lab3_template/onlinecourse/templates/onlinecourse/: course_detail.html  course_list.html
myfirstproject/: Dockerfile  entrypoint.sh  pyproject.toml
myfirstproject/firstapp/: urls.py  views.py
myfirstproject/myfirstproject/: settings.py  urls.py
