[project]
name = "lab3-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.13"
dependencies = [
    "aiohttp==3.8.5",
    "click==8.0.4",
    "contextvars>=2.4",
    "django==3.1.3",
    "gunicorn==20.1.0",
    "jinja2==3.0",
    "multidict==4.5",
    "pillow==10.0.0",
    "python-dotenv>=1.0.1",
    "typing-extensions==4.1.1",
    "wheel==0.41.1",
]
