[project]
name = "module2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "django>=5.2.5",
    "python-dotenv>=1.1.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D103", "D100", "ARG001", "DTZ011"]
unfixable = ["F401"]